[package]
name = "jarvis-entsoe-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
ctor = "0.1"
json_env_logger = { version = "0.1", features = ["iso-timestamps", "backtrace"] }
log = { version = "0.4", features = ["kv_unstable_std"]}
gcp-bigquery-client = "0.12"
kube = { version = "0.73", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15", features = ["v1_22"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }
rust_decimal = { version = "1.36", features = ["serde-with-float", "serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde-xml-rs = "0.6"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
tokio-retry = "0.3"
uuid = { version = "1.1", features = ["v4"] }

[package.metadata.cargo-machete]
ignored = ["openssl"]